# lexd

./: .gitignore  AUTHORS  Makefile.am  README  README.md  Usage.md  configure.ac  example.dix  lexd.pc.in
.github/workflows/: build.yaml
imgs/: lexc.dot  twoc.dot
locales/: Makefile.am  root.txt
m4/: ax_check_icu.m4
src/: Makefile.am  alphabet.h  dix.dtd  dix2lexd.xsl  help2man.sh  icu-iter.cc  icu-iter.h  lexd.1  lexd.cc  lexdcompiler.cc  lexdcompiler.h  lexicon.cc  lexicon.h  state.cc  state.h
tests/: README.md  baseline.twod  comp.lexd  heb.lexc  heb.lexd  heb.sh  heb.sh2  heb.twoc  heb_vow.twoc  kik.lexc  kik.lexd  kik.sh2  kik.twoc  lin.lexc  lin.lexd  lin.sh2  lin.twoc  test.lexd  test.twoc  timing.sh  trilit.lexd  wad.lexc  wad.sh  wad.sh2  wad.twoc
tests/feature/: Makefile  negtest-col0.lexd  negtest-trailing-bracket.lexd  test-alt.lexd  test-alt.lexd.txt.strings.gold  test-anonlex-modifier.lexd  test-anonlex.lexd  test-anonpat-filter-ops.lexd  test-anonpat-filter.lexd  test-anonpat-filter.lexd.txt.strings.gold  test-anonpat-modifier.lexd  test-anonpat-modifier.lexd.txt.strings.gold  test-anonpat-nospaces.lexd  test-anonpat-ops.lexd  test-anonpat-ops.lexd.txt.strings.gold  test-anonpat.lexd  test-conflicting-tags.lexd  test-conflicting-tags.lexd.txt.strings.gold  test-diacritic.lexd  test-diacritic.lexd.txt.strings.gold  test-disjoint-opt.lexd  test-disjoint-opt.lexd.txt.strings.gold  test-empty-patterns.lexd  test-empty-patterns.lexd.txt.strings.gold  test-filter-crosstalk.lexd  test-filter-crosstalk.lexd.txt.strings.gold  test-lexdeftag.lexd  test-lexdeftag.lexd.txt.strings.gold  test-lexicon-side-tags.lexd  test-lexname-space.lexd  test-lexnegtag.lexd  test-lextag.lexd  test-lextag.lexd.txt.strings.gold  test-multipos.lexd  test-multipos.lexd.txt.strings.gold  test-nontree.lexd  test-oneside.lexd  test-oneside.lexd.txt.strings.gold  test-opt.lexd  test-opt.lexd.txt.strings.gold  (+27 more)
